[package]
name = "advent-of-code-2017"
version = "0.1.0"
authors = ["Kosi Nwabueze <kosinwabueze@gmail.com>"]

[[bin]]
name = "01"
path = "src/problem_01.rs"

[[bin]]
name = "02"
path = "src/problem_02.rs"

[[bin]]
name = "03"
path = "src/problem_03.rs"

[[bin]]
name = "04"
path = "src/problem_04.rs"

[[bin]]
name = "05"
path = "src/problem_05.rs"

[[bin]]
name = "06"
path = "src/problem_06.rs"

[dependencies]
